--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="icon" type="image/x-icon" href="icon.png" />
   </head>
   <body>
+      <div class="credits">
+    Imaginé par Julien MARTINEZ-MONNIELLO<br>
+    Développé par Thomas GOUROUZA
+  </div>
     <div id="settings-wrapper" class="page">
       <div class="two-col-layout first-col">
         <form name="parameter-form">
