--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
       <div class="credits">
-    Imaginé par Julien MARTINEZ-MONNIELLO<br>
-    Développé par Thomas GOUROUZA
+    Imaginé par <strong>Julien MARTINEZ-MONNIELLO</strong><br>
+    Développé par <strong>Thomas GOUROUZA</strong>
   </div>
     <div id="settings-wrapper" class="page">
       <div class="two-col-layout first-col">
