--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <th>Date de début</th>
                   <th>Nombre de jours</th>
                   <th>Jours fériés</th>
-                  <th>Durée d'une leçon</th>
+                  <th>Durée d'une séance</th>
                 </tr>
               </thead>
               <tbody>
