--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <table class="parameter">
               <thead>
                 <tr>
-                  <th>Date de début</th>
-                  <th>Nombre de jours</th>
+                  <th>Date de début de session</th>
+                  <th>Nombre de séances</th>
                   <th>Jours fériés</th>
                   <th>Durée d'une séance</th>
                 </tr>
