--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             class="navigation"
             value="Suivant &nbsp;&nbsp; →"
           />
-          <h1 class="parameters">Paramètres</h1>
+          <h1 class="parameters">Paramètres de la session</h1>
           <div>
             <table class="parameter">
               <thead>
