--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             >
             <input type="file" id="file-input" />
           </div>
+          <div style="margin-top: 20px;">
+  <button onclick="window.location.href='data.csv'" class="custom-file-input margin">Télécharger le modèle</button>
+</div>
           <div id="erase-data" style="display: none">
             <button class="csv" onclick="erase()">Effacer</button>
           </div>
