--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
       <div class="two-col-layout">
         <h1 class="teachers-levels">Professeurs et niveaux</h1>
         <div class="flex">
-          <div id="not-erase-data">
-            <label for="file-input" class="custom-file-input margin"
-              >Importer csv</label
-            >
-            <input type="file" id="file-input" />
+          <div class="button-group">
+            <div>
+              <label for="file-input" class="custom-file-input margin">Importer csv</label>
+              <input type="file" id="file-input" />
+            </div>
+            <div style="margin-top: 10px;">
+              <button onclick="window.location.href='data.csv'" class="custom-file-input margin">Télécharger le modèle</button>
+            </div>
           </div>
-          <div style="margin-top: 20px;">
-  <button onclick="window.location.href='data.csv'" class="custom-file-input margin">Télécharger le modèle</button>
-</div>
           <div id="erase-data" style="display: none">
             <button class="csv" onclick="erase()">Effacer</button>
           </div>
@@ -133,9 +133,7 @@
             Exporter csv
           </button>
           <div id="not-erase-constraints">
-            <label for="file-input-constraints" class="custom-file-input margin"
-              >Importer csv</label
-            >
+            <label for="file-input-constraints" class="custom-file-input margin">Importer csv</label>
             <input type="file" id="file-input-constraints" />
           </div>
           <div id="erase-constraints" style="display: none">
@@ -152,7 +150,7 @@
               <th>Indispo réc <button class="reset" onclick="resetRecDaysOff()">↻</button></th>
               <th>Congés &nbsp;&nbsp; <button class="reset" onclick="resetDaysOff()">↻</button></th>
               <th>Volume horaire (h) <button class="reset" onclick="resetHours()">↻</button></th>
-              <th>Niv préférés <button class="reset" onclick="resetPreferredLevels()">↻</button></th>
+              <th>Niv préférés <button the="reset" onclick="resetPreferredLevels()">↻</button></th>
             </tr>
           </thead>
           <tbody id="tbody-teachers"></tbody>
@@ -225,7 +223,7 @@
                 <td>
                   <select class="bigger" id="levels" name="levelName" required>
                     <option value=""></option>
-                  </select>
+                  </select
                 </td>
                 <td>
                   <input
