--- a/index.html
+++ b/index.html
@@ -100,19 +100,24 @@
       <div class="two-col-layout">
         <h1 class="teachers-levels">Professeurs et niveaux</h1>
         <div class="flex">
-          <div id="not-erase-data">
-            <label for="file-input" class="custom-file-input margin"
-              >Importer csv</label
-            >
-            <input type="file" id="file-input" />
-          </div>
-          <div id="erase-data" style="display: none">
-            <button class="csv" onclick="erase()">Effacer</button>
-          </div>
-          <div>
-            <span id="data-loaded"></span>
-          </div>
-        </div>
+         <div id="not-erase-data">
+  <div class="file-upload-group">
+    <label for="file-input" class="custom-file-input margin">
+      Importer csv
+    </label>
+    <input type="file" id="file-input" />
+    <!-- New button for downloading the CSV template -->
+    <button class="custom-file-input margin" onclick="downloadTemplate()" style="margin-top: 20px;">
+      Télécharger le modèle
+    </button>
+  </div>
+  <div id="erase-data" style="display: none">
+    <button class="csv" onclick="erase()">Effacer</button>
+  </div>
+  <div>
+    <span id="data-loaded"></span>
+  </div>
+</div>
       </div>
     </div>
     <div id="conditions-wrapper" class="page" style="display: none">
