--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@
     <label for="file-input" class="custom-file-input margin">Importer csv</label>
     <span id="data-loaded">Pas de données.</span>
   </div>
-  <!-- New button for downloading the CSV template -->
-  <button class="custom-file-input margin" onclick="downloadTemplate()">
-    Télécharger le modèle
-  </button>
+  <button class="custom-file-input margin" onclick="downloadTemplate()">Télécharger le modèle</button>
 </div>
 <div id="erase-data" style="display: none">
   <button class="csv" onclick="erase()">Effacer</button>
