--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="icon.png" />
   </head>
   <body>
-<div class="credits">
+    <div class="credits">
   Imaginé par <strong>Julien MARTINEZ-MONNIELLO</strong><br>
   Développé par <strong>Thomas GOUROUZA</strong>
 </div>
@@ -24,15 +24,15 @@
             class="navigation"
             value="Suivant &nbsp;&nbsp; →"
           />
-          <h1 class="parameters">Paramètres de la session</h1>
+          <h1 class="parameters">Paramètres</h1>
           <div>
             <table class="parameter">
               <thead>
                 <tr>
                   <th>Date de début</th>
-                  <th>Nombre de séances</th>
+                  <th>Nombre de jours</th>
                   <th>Jours fériés</th>
-                  <th>Durée d'une séance</th>
+                  <th>Durée d'une leçon</th>
                 </tr>
               </thead>
               <tbody>
@@ -100,26 +100,19 @@
       <div class="two-col-layout">
         <h1 class="teachers-levels">Professeurs et niveaux</h1>
         <div class="flex">
-<div id="not-erase-data" class="file-upload-group">
-    <!-- For the "Importer CSV" button -->
-    <a href="#" class="custom-file-input navigation" id="import-csv-btn">Importer csv</a>
-    
-    <input type="file" id="file-input" class="hidden" onchange="handleFileUpload()" />
-    
-    <span id="data-loaded">Pas de données.</span>
-
-    <!-- For the "Télécharger le modèle" button -->
-    <a href="data.csv" download="data.csv" class="custom-file-input navigation">Télécharger le modèle</a>
-</div>
-
-<div id="erase-data" style="display: none">
-  <button class="csv" onclick="erase()">Effacer</button>
-</div>
-
-  <div>
-    <span id="data-loaded"></span>
-  </div>
-</div>
+          <div id="not-erase-data">
+            <label for="file-input" class="custom-file-input margin"
+              >Importer csv</label
+            >
+            <input type="file" id="file-input" />
+          </div>
+          <div id="erase-data" style="display: none">
+            <button class="csv" onclick="erase()">Effacer</button>
+          </div>
+          <div>
+            <span id="data-loaded"></span>
+          </div>
+        </div>
       </div>
     </div>
     <div id="conditions-wrapper" class="page" style="display: none">
@@ -257,23 +250,6 @@
       </div>
     </div>
     <!-- Load util files -->
-     <script>
-      // Ensure the file input is triggered when the "Importer CSV" button is clicked
-      document.getElementById('import-csv-btn').addEventListener('click', function(event) {
-        event.preventDefault(); // Prevent the default link behavior
-        document.getElementById('file-input').click(); // Trigger the file input click
-      });
-
-      // Handle file upload when a file is selected
-      function handleFileUpload() {
-        const fileInput = document.getElementById('file-input');
-        if (fileInput.files.length > 0) {
-          // Handle the file upload here
-          console.log('File selected:', fileInput.files[0].name);
-          document.getElementById('data-loaded').textContent = 'Données chargées'; // Update the message
-        }
-      }
-    </script>
     <script src="utils/common-util.js"></script>
     <script src="utils/html-conditions-builder-util.js"></script>
     <script src="utils/html-result-confirmations-builder-util.js"></script>
