--- a/index.html
+++ b/index.html
@@ -100,15 +100,19 @@
       <div class="two-col-layout">
         <h1 class="teachers-levels">Professeurs et niveaux</h1>
         <div class="flex">
-          <div id="not-erase-data">
-            <label for="file-input" class="custom-file-input margin"
-              >Importer csv</label
-            >
-            <input type="file" id="file-input" />
-          </div>
-          <div id="erase-data" style="display: none">
-            <button class="csv" onclick="erase()">Effacer</button>
-          </div>
+<div id="not-erase-data">
+  <label for="file-input" class="custom-file-input margin">Importer csv</label>
+  <input type="file" id="file-input" />
+</div>
+
+<!-- New CSV model button -->
+<div id="csv-model-wrapper" style="margin-top: 20px;">
+  <button class="csv" id="download-model-csv" onclick="downloadModelCSV()">Modèle CSV</button>
+</div>
+
+<div id="erase-data" style="display: none">
+  <button class="csv" onclick="erase()">Effacer</button>
+</div>
           <div>
             <span id="data-loaded"></span>
           </div>
