--- a/index.html
+++ b/index.html
@@ -270,5 +270,26 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!-- Load script -->
     <script src="script.js"></script>
+    <script>
+  function downloadModelCSV() {
+    const modelData = [
+      ["Date", "Professeur", "Niveau"], // Sample headers
+      ["2024-11-23", "Prof. Dupont", "Niveau 1"], // Sample data row
+      ["2024-11-24", "Prof. Martin", "Niveau 2"]
+    ];
+
+    let csvContent = "data:text/csv;charset=utf-8,";
+    modelData.forEach(row => {
+      csvContent += row.join(",") + "\r\n"; // Join row data with commas and add a new line
+    });
+
+    const encodedUri = encodeURI(csvContent);
+    const link = document.createElement("a");
+    link.setAttribute("href", encodedUri);
+    link.setAttribute("download", "modele.csv");
+    document.body.appendChild(link);
+    link.click();
+  }
+</script>
   </body>
 </html>
