--- a/index.html
+++ b/index.html
@@ -271,25 +271,19 @@
     <!-- Load script -->
     <script src="script.js"></script>
     <script>
-  function downloadModelCSV() {
-    const modelData = [
-      ["Date", "Professeur", "Niveau"], // Sample headers
-      ["2024-11-23", "Prof. Dupont", "Niveau 1"], // Sample data row
-      ["2024-11-24", "Prof. Martin", "Niveau 2"]
-    ];
-
-    let csvContent = "data:text/csv;charset=utf-8,";
-    modelData.forEach(row => {
-      csvContent += row.join(",") + "\r\n"; // Join row data with commas and add a new line
-    });
-
-    const encodedUri = encodeURI(csvContent);
-    const link = document.createElement("a");
-    link.setAttribute("href", encodedUri);
-    link.setAttribute("download", "modele.csv");
-    document.body.appendChild(link);
-    link.click();
-  }
+function downloadModelCSV() {
+  // Create a link element
+  const link = document.createElement('a');
+  
+  // Set the href to the location of the 'data.csv' file in the root of the repository
+  link.setAttribute('href', '/data.csv');  // Path to the CSV file in the root directory
+  link.setAttribute('download', 'data.csv');  // The file will be downloaded with this name
+  
+  // Append the link, trigger a click to download the file, and remove the link after download
+  document.body.appendChild(link);
+  link.click();
+  document.body.removeChild(link);
+}
 </script>
   </body>
 </html>
