--- a/index.html
+++ b/index.html
@@ -101,13 +101,15 @@
         <h1 class="teachers-levels">Professeurs et niveaux</h1>
         <div class="flex">
 <div id="not-erase-data">
+  <!-- Importer CSV -->
   <label for="file-input" class="custom-file-input margin">Importer csv</label>
   <input type="file" id="file-input" />
-</div>
-
-<!-- New CSV model button -->
-<div id="csv-model-wrapper" style="margin-top: 20px;">
-  <button class="csv" id="download-model-csv" onclick="downloadModelCSV()">Modèle CSV</button>
+  
+  <!-- Modèle CSV -->
+  <div style="display: flex; align-items: center; gap: 10px;">
+    <button class="csv" id="download-model-csv" onclick="downloadModelCSV()">Modèle CSV</button>
+    <span>Si vous utilisez l'appli pour la première fois, téléchargez le tableau des profs et niveaux à compléter.</span>
+  </div>
 </div>
 
 <div id="erase-data" style="display: none">
